--- a/pom.xml
+++ b/pom.xml
@@ -43,10 +43,12 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.8.1</version>
+			  <configuration>
+				<source>17</source>
+				<target>17</target>
+				  <excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
@@ -58,3 +60,4 @@
 	</build>
 
 </project>
+
