--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,9 @@
 			  <configuration>
 				<source>17</source>
 				<target>17</target>
-				  <excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
+				  <excludes><exclude>
+					  <groupId>org.projectlombok</groupId>
+					  <artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
 				</configuration>
