--- a/pom.xml
+++ b/pom.xml
@@ -43,14 +43,14 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
+				    <configuration>
 					<source>17</source>
 					<target>17</target>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
 
